# fampp2

./: .gitignore  ChangeLog  Makefile.am  Portfile  README  TODO  VERSION  autogen.sh  config.h.in  configure.ac  configure.in  fampp.spec.in  fampp2-config.in  fampp2.pc.in  myconfigure.sh
debian/: .gitignore  changelog  control  rules
examples/: Makefile.am
examples/console_test/: .gitignore  Makefile.am  famppct.cpp
examples/gtk/: Makefile.am  famppgtk.cpp
macros/: ferrismacros.m4
src/: Fampp2.cpp  Fampp2.hh  Fampp2GlibSupport.cpp  Fampp2GlibSupport.hh  Fampp2Handle.hh  Fampp2_private.hh  FamppEvents.cpp  FamppEvents.hh  FamppExceptions.hh  Makefile.am
